text too small on mobile and other corrections

--- a/src/app/components/card/card.css
+++ b/src/app/components/card/card.css
@@ -9,7 +9,7 @@
 .card {
     display: flex;
     width: min(90vw, 700px);
-    border-radius: 10px;
+    border-radius: 4px;
     background-color: var(--color-tertiary-light);
     box-shadow: 0px 3px 2px var(--color-shadow-tertiary);
 }
