--- a/src/app/components/study-space/study-space.css
+++ b/src/app/components/study-space/study-space.css
@@ -4,6 +4,16 @@
   flex: 1;
 }
 
+.inner-main
+{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    text-align: center;
+    gap: var(--spacing);
+}
+
 h1 {
     margin: 20px;
 }
@@ -25,7 +35,7 @@ h1 {
    background-color: var(--color-primary);
    box-shadow: 0px 4px 2px var(--color-shadow-primary);
    padding: var(--padding-small);
-   gap:var(--spacing);
+   gap:var(--spacing-small);
 }
 
 .stats p {
@@ -90,6 +100,6 @@ h1 {
 
 @media (max-width: 480px) {
     .stats p {
-        font-size: var(--font-size-normal-text);
+      /*  font-size: var(--font-size-normal-text);*/
     }
 }
