--- a/src/app/components/xlsx-sheet-chooser/xlsx-sheet-chooser.scss
+++ b/src/app/components/xlsx-sheet-chooser/xlsx-sheet-chooser.scss
@@ -4,6 +4,16 @@
   flex: 1;
 }
 
+.inner-main
+{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    text-align: center;
+    gap: var(--spacing);
+}
+
 h1 {
    text-align: center;
 }
