--- a/src/app/components/xlsx-sheet-infos/xlsx-sheet-infos.css
+++ b/src/app/components/xlsx-sheet-infos/xlsx-sheet-infos.css
@@ -4,10 +4,19 @@
   flex: 1;
 }
 
+.inner-main
+{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    text-align: center;
+    gap: var(--spacing);
+}
+
 .header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: var(--padding-normal);
 }
 
@@ -19,12 +28,15 @@
 .header .header-actions {
   display: flex;
   gap: var(--spacing);
+  justify-content: center;
 }
 
 /* ::ng-deep to override the button component css properties */
 ::ng-deep .custom-button button {
-  width: min(45dvw, 180px);
+  min-width: min(45dvw, 180px);
 }
+
+
 
 
 .cards-area {
@@ -48,11 +60,8 @@
 .back-view {
     display: flex;
     flex-direction: column;
-    flex: 1 1 0;
-    align-items: center;
+    flex: 1;
     gap: var(--spacing);
-    min-width: 0px;
-    min-height: 0px;
 }
 
 
@@ -98,6 +107,7 @@
 
 .column-element p {
   margin: 0px;
+  font-size: var(--font-size-normal-text);
 }
 
 
