--- a/src/styles.css
+++ b/src/styles.css
@@ -58,10 +58,11 @@ app-root {
   /* Text */
   --color-text-muted: #808080;
   --color-text-black: black;
-  --font-size-normal-text: clamp(0.80rem, 1vw, 1.1rem); /* clamp auto calculates a value between (min, prefered, max) */
-  --font-size-bigger-text: clamp(1rem, 1.3vw, 1.35rem);
-  --font-size-h1: clamp(1.8rem, 3vw, 2.3rem);
-  --font-size-h3: clamp(1.2rem, 2vw, 1.7rem);
+  --font-size-normal-text: clamp(0.95rem, 1vw, 1.1rem); /* clamp auto calculates a value between (min, prefered, max) */
+  --font-size-bigger-text: clamp(1.1rem, 1.3vw, 1.35rem);
+  --font-size-small-text: clamp(0.80rem, 0.9vw, 0.9rem);
+  --font-size-h1: clamp(1.6rem, 3vw, 2.3rem);
+  --font-size-h3: clamp(1.3rem, 2vw, 1.7rem);
 
 
   /* Shadows */
